--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.3",
     "node-sass": "^4.14.1",
+    "query-string": "^6.13.8",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^16.13.1",
@@ -45,6 +46,7 @@
   "devDependencies": {
     "@types/jest": "^24.9.1",
     "@types/node": "^12.19.14",
+    "@types/query-string": "^6.3.0",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
